--- a/css/style.css
+++ b/css/style.css
@@ -41,7 +41,7 @@ main {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 2.5625rem ;
+  padding:0  2.5625rem ;
   
 
   
@@ -98,8 +98,7 @@ header{
   height:auto;
 }
 
-
-.header h1{
+.header .head_text h1{
   font-size: 2rem;
   text-align: center;
   font-weight: 700;
@@ -107,10 +106,9 @@ header{
 
 }
 
-.header p{
+.header .head_text p{
   font-size:1.2rem;
   text-align: left;
-  padding: 0 200px;
 
 }
 
@@ -473,10 +471,6 @@ input{
   .nav .menu a{
     display:block;
   }
-  header{
-    min-height:10px;
-    position:fixed;
-    border-bottom:2px solid var(--bs-white);
-  }
+
 
 }
